fix: :bug: fix wrong font

--- a/index.scss
+++ b/index.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: "Source Serif 4", serif;
+    font-family: "Source Serif 4 Variable", "Source Serif 4", serif;
     background-color: var(--bg);
     color: var(--col);
 }
